--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -25,6 +25,10 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
-        "sweetalert": "^2.1.2"
+        "laravel-echo": "^1.8.1",
+        "pusher-js": "^7.0.0",
+        "sweetalert": "^2.1.2",
+        "vue-axios": "^2.1.5",
+        "vue-chat-scroll": "^1.4.0"
     }
 }
