--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.8.1",
+        "moment": "^2.27.0",
         "pusher-js": "^7.0.0",
         "sweetalert": "^2.1.2",
         "vue-axios": "^2.1.5",
