--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "pusher/pusher-php-server": "~4.0",
+        "realrashid/sweet-alert": "^3.1",
         "tightenco/ziggy": "^0.9.4",
         "uxweb/sweet-alert": "^2.0"
     },
